fixed a z-index bug

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ nav {
   list-style: none;
   margin: 0;
   padding: 0;
+  z-index: 5;
 }
 
 .nav_bar a {
